fix: align date and title at baseline

--- a/themes/do-cyberpunk-theme/assets/css/section.css
+++ b/themes/do-cyberpunk-theme/assets/css/section.css
@@ -49,6 +49,7 @@ body {
 
 .list-element {
     display: grid;
+    align-items: baseline;
 }
 
 /* Tablet (or bigger screen) style */
